<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.lappsgrid.maven</groupId>
        <artifactId>parent-pom</artifactId>
        <version>2.0.0</version>
    </parent>
	<groupId>edu.brandeis.cs</groupId>
	<artifactId>planner</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>war</packaging>
	<name>Planner</name>
	<description>
        Planner for Lapps Services.
	</description>


    <repositories>
        <!--<repository>-->
            <!--<id></id>-->
            <!--<url></url>-->
        <!--</repository>-->
    </repositories>

    <properties>
        <lapps.all>2.2.0</lapps.all>
        <lapps.discriminator>2.2.0</lapps.discriminator>
        <lapps.serialization>2.1.0</lapps.serialization>
        <opennlp.version>1.5.3</opennlp.version>
        <stanford.version>3.4.1</stanford.version>
        <hibernate.version>5.1.0.Final</hibernate.version>
    </properties>


	<dependencies>

        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-entitymanager</artifactId>
            <version>${hibernate.version}</version>
        </dependency>

        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>9.4.1208.jre7</version>
        </dependency>

        <dependency>
            <groupId>org.lappsgrid</groupId>
            <artifactId>all</artifactId>
            <version>${lapps.all}</version>
        </dependency>
        <dependency>
            <groupId>org.lappsgrid</groupId>
            <artifactId>discriminator</artifactId>
            <version>${lapps.discriminator}</version>
        </dependency>

        <dependency>
            <groupId>org.lappsgrid</groupId>
            <artifactId>serialization</artifactId>
            <version>${lapps.serialization}</version>
        </dependency>

        <dependency>
            <groupId>jiprolog</groupId>
            <artifactId>jiprolog</artifactId>
            <version>4.1.4.1</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/jiprolog-4.1.4.1.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>gnuprolog</groupId>
            <artifactId>gnuprologjava</artifactId>
            <version>0.2.6</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/gnuprologjava-0.2.6.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>it.unibo.alice.tuprolog</groupId>
            <artifactId>tuprolog</artifactId>
            <version>2.1.1</version>
        </dependency>
        <dependency>
            <groupId>commons-jxpath</groupId>
            <artifactId>commons-jxpath</artifactId>
            <version>1.3</version>
        </dependency>
        <dependency>
            <groupId>commons-beanutils</groupId>
            <artifactId>commons-beanutils</artifactId>
            <version>1.9.2</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-configuration2</artifactId>
            <version>2.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.5.2</version>
        </dependency>
        <dependency>
            <groupId>org.lappsgrid</groupId>
            <artifactId>service-grid-libs</artifactId>
            <version>1.1.0</version>
        </dependency>
        <dependency>
            <groupId>com.jayway.jsonpath</groupId>
            <artifactId>json-path</artifactId>
            <version>2.2.0</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.8.1</version>
            <scope>test</scope>
        </dependency>
	</dependencies>

	<build>
		<finalName>${project.artifactId}#${project.version}</finalName>
		<plugins>
            <!--<plugin>-->
                <!--<groupId>de.juplo</groupId>-->
                <!--<artifactId>hibernate4-maven-plugin</artifactId>-->
                <!--<version>1.0.3</version>-->
                <!--<executions>-->
                    <!--<execution>-->
                        <!--<goals>-->
                            <!--<goal>export</goal>-->
                        <!--</goals>-->
                    <!--</execution>-->
                <!--</executions>-->
                <!--<configuration>-->
                    <!--<driverClassName>org.postgresql.Driver</driverClassName>-->
                    <!--<hibernateDialect>org.hibernate.dialect.PostgresPlusDialect</hibernateDialect>-->
                    <!--<username>postgres</username>-->
                    <!--<password>postgres</password>-->
                    <!--<url>jdbc:postgresql://localhost:5432/mydb</url>-->
                    <!--<target>BOTH</target>-->
                <!--</configuration>-->
                <!--<dependencies>-->
                    <!--<dependency>-->
                        <!--<groupId>org.postgresql</groupId>-->
                        <!--<artifactId>postgresql</artifactId>-->
                        <!--<version>9.4.1208</version>-->
                    <!--</dependency>-->
                <!--</dependencies>-->
            <!--</plugin>-->

            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass></mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
            </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.16</version>
				<configuration>
					<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
					<!-- mvn test: java.lang.OutOfMemoryError: Java heap space -->
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.mortbay.jetty</groupId>
				<artifactId>maven-jetty-plugin</artifactId>
				<version>6.1.10</version>
				<configuration>
                    <stopKey></stopKey>
                    <stopPort></stopPort>
					<scanIntervalSeconds>10</scanIntervalSeconds>
					<connectors>
						<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
							<port>4040</port>
							<maxIdleTime>60000</maxIdleTime>
						</connector>
					</connectors>
				</configuration>
			</plugin>
        </plugins>
	</build>

</project>
